force-app/main/default/objects/Contract/fields/Contract_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_18__c</fullName>
    <description>18 Digit Record Id to be used in Excel Data Manipulations</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18 Digit Record Id to be used in Excel Data Manipulations</inlineHelpText>
    <label>Contract ID (18)</label>
    <type>Text</type>
</CustomField>