force-app/main/default/objects/Contract/fields/CWS_120_Days_Sent__c.field-meta.xml
<CustomField>
    <fullName>CWS_120_Days_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field Captures whether the 120 Day Notification is sent or not to the Contact</description>
    <label>120 Days Sent</label>
    <type>Checkbox</type>
</CustomField>