force-app/main/default/objects/Contract/fields/CWS_Account_Restriction_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account_Restriction_Status__c</fullName>
    <formula>Text(Account.CWS_Account_Restriction_Status__c)</formula>
    <label>Account Restriction Status</label>
    <type>Text</type>
</CustomField>