force-app/main/default/objects/Contract/fields/CWS_Additional_Disc__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Disc__c</fullName>
    <description>Additional discount extended to customer.</description>
    <inlineHelpText>Additional discount extended to customer.</inlineHelpText>
    <label>Additional Disc. (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>