force-app/main/default/objects/Contract/fields/CWS_Additional_Terms_Clauses__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Terms_Clauses__c</fullName>
    <label>Additional Terms/Clauses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>