force-app/main/default/objects/Contract/fields/CWS_Addl_Disc_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Addl_Disc_Amount__c</fullName>
    <description>Amount of additional discount on this quote.</description>
    <inlineHelpText>Amount of additional discount on this quote.</inlineHelpText>
    <label>Addl. Disc. Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>