force-app/main/default/objects/Contract/fields/CWS_Amendment_Renewal_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Amendment_Renewal_Reason__c</fullName>
    <label>Amendment/Renewal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Currency Conversion</fullName>
            </value>
            <value>
                <fullName>Agreement Conversion</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>