force-app/main/default/objects/Contract/fields/CWS_Annual_End_Customer_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Annual_End_Customer_Net_Total__c</fullName>
    <description>Annualized End Customer Net Total from Quote</description>
    <inlineHelpText>Annualized End Customer Net Total from Quote</inlineHelpText>
    <label>Annualized End Customer Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>