force-app/main/default/objects/Contract/fields/CWS_Annual_Reseller_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Annual_Reseller_Net_Total__c</fullName>
    <description>Annualized Reseller Net Total</description>
    <inlineHelpText>Annualized Reseller Net Total from Quote</inlineHelpText>
    <label>Annualized Reseller Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>