force-app/main/default/objects/Contract/fields/CWS_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill To Account for the Contract</description>
    <inlineHelpText>Bill To Account for the Contract</inlineHelpText>
    <label>Bill To (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>