force-app/main/default/objects/Contract/fields/CWS_Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill To Contact associated with this contract.</description>
    <inlineHelpText>Bill To Contact associated with this contract.</inlineHelpText>
    <label>Bill To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Add Bill To Contact associated with Bill To Accounts.</errorMessage>
        <filterItems>
            <field>$Source.CWS_Bill_To_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Add Bill To Contact associated with Bill To Accounts.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>