force-app/main/default/objects/Contract/fields/CWS_Bill_To_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bill_To_Contact_Email__c</fullName>
    <description>Primary Email of the Bill To Contact</description>
    <formula>CWS_Bill_To_Contact__r.Email</formula>
    <inlineHelpText>Primary Email of the Bill To Contact</inlineHelpText>
    <label>Bill To Contact Email</label>
    <type>Text</type>
</CustomField>