force-app/main/default/objects/Contract/fields/CWS_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Cancellation_Date__c</fullName>
    <description>Cancellation Date</description>
    <inlineHelpText>Cancellation Date of the contract</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>