force-app/main/default/objects/Contract/fields/CWS_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>CWS_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancelled Flag indicates all the subscriptions under a contract got terminated.</description>
    <inlineHelpText>Indicates that all the Subscriptions in this contract got terminated.</inlineHelpText>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>