force-app/main/default/objects/Contract/fields/CWS_CMS_ITS_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMS_ITS_Portal_ID__c</fullName>
    <description>CMS IT Support Portal ID</description>
    <formula>Account.CWS_IT_Support_Portal_ID__c</formula>
    <inlineHelpText>CMS IT Support Portal ID</inlineHelpText>
    <label>CMS ITS Portal ID</label>
    <type>Text</type>
</CustomField>