force-app/main/default/objects/Contract/fields/CWS_Contract_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contract_ACV__c</fullName>
    <description>Contract ACV value which will be a Roll-up of all the subscriptions present within the Contract.</description>
    <label>Contract ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>