force-app/main/default/objects/Contract/fields/CWS_Contract_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contract_Effective_Start_Date__c</fullName>
    <label>Contract Effective Start Date</label>
    <type>Date</type>
</CustomField>