force-app/main/default/objects/Contract/fields/CWS_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Conversion_Type__c</fullName>
    <description>This value gets populated with the conversion Type present in the related quote</description>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Conversion_Type</valueSetName>
    </valueSet>
</CustomField>