force-app/main/default/objects/Contract/fields/CWS_ConversionType__c.field-meta.xml
<CustomField>
    <fullName>CWS_ConversionType__c</fullName>
    <label>Amend Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_TransactionReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CWS_Conversion_Type</valueSetName>
    </valueSet>
</CustomField>