force-app/main/default/objects/Contract/fields/CWS_Created_By_AMCont__c.field-meta.xml
<CustomField>
    <fullName>CWS_Created_By_AMCont__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to capture whether the Logged in user is a AM or not.</description>
    <label>Created By AM</label>
    <type>Checkbox</type>
</CustomField>