force-app/main/default/objects/Contract/fields/CWS_Credit_Quote__c.field-meta.xml
<CustomField>
    <fullName>CWS_Credit_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Credit Quote)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>