force-app/main/default/objects/Contract/fields/CWS_Custom_Increase_Language__c.field-meta.xml
<CustomField>
    <fullName>CWS_Custom_Increase_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Increase Language</label>
    <type>Checkbox</type>
</CustomField>