force-app/main/default/objects/Contract/fields/CWS_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>CWS_Days_Remaining__c</fullName>
    <description>New Field to capture the Days From Expiration of Contract.</description>
    <formula>IF(SBQQ__ExpirationDate__c!=TODAY()&amp;&amp; NOT(ISNULL(SBQQ__ExpirationDate__c)),(SBQQ__ExpirationDate__c-TODAY()),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>