force-app/main/default/objects/Contract/fields/CWS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This value gets populated based on the realted quote&apos;s distributor</description>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Distributor)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>