force-app/main/default/objects/Contract/fields/CWS_Distributor_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Category__c</fullName>
    <label>Distributor Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>