force-app/main/default/objects/Contract/fields/CWS_Distributor_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Fulfillment_Type__c</fullName>
    <description>The field&apos;s value gets populated from the related Quote&apos;s Distributor Fulfillment Type Field</description>
    <label>Distributor Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Fulfillment_Type</valueSetName>
    </valueSet>
</CustomField>