force-app/main/default/objects/Contract/fields/CWS_End_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_End_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (End Partner Account)</relationshipLabel>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>