force-app/main/default/objects/Contract/fields/CWS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Message__c</fullName>
    <description>Error Message when updating the Contract.</description>
    <inlineHelpText>Error Message when updating the Contract.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>