force-app/main/default/objects/Contract/fields/CWS_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exchange_Rate__c</fullName>
    <formula>SBQQ__Quote__r.CWS_Exchange_Rate__c</formula>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>