force-app/main/default/objects/Contract/fields/CWS_Increase_Language_Percent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Increase_Language_Percent__c</fullName>
    <label>Increase Language Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>