force-app/main/default/objects/Contract/fields/CWS_Is_Contract_Near_Expiry__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Contract_Near_Expiry__c</fullName>
    <formula>(EndDate - Today()) &lt;= 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Near Expiry?</label>
    <type>Checkbox</type>
</CustomField>