force-app/main/default/objects/Contract/fields/CWS_IT_Support_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_IT_Support_Portal_ID__c</fullName>
    <description>IT Support Portal ID</description>
    <inlineHelpText>IT Support Portal ID</inlineHelpText>
    <label>IT Support Portal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>