force-app/main/default/objects/Contract/fields/CWS_Legacy_Disti_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Disti_Factor__c</fullName>
    <description>The value that is migrated from legacy which may be referred by the user to understand how much discount should be manually applied on quote lines so that it matches with legacy prices.</description>
    <inlineHelpText>The value that is migrated from legacy which may be referred by the user to understand how much discount should be manually applied on quote lines so that it matches with legacy prices.</inlineHelpText>
    <label>Legacy Disti Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>