force-app/main/default/objects/Contract/fields/CWS_Legacy_Formula_Key__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Formula_Key__c</fullName>
    <formula>SBQQ__Quote__r.CWS_LegacyKey__c</formula>
    <label>Legacy Key</label>
    <type>Text</type>
</CustomField>