force-app/main/default/objects/Contract/fields/CWS_Legacy_MNG_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_MNG_Account_ID__c</fullName>
    <description>Legacy MNG Account ID</description>
    <inlineHelpText>Legacy MNG Account ID</inlineHelpText>
    <label>Legacy MNG Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>