force-app/main/default/objects/Contract/fields/CWS_Legacy_Salesforce_Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Salesforce_Account_ID_18__c</fullName>
    <description>Legacy Salesforce Account ID</description>
    <inlineHelpText>Legacy Salesforce Account ID</inlineHelpText>
    <label>Legacy Salesforce Account ID (18)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>