force-app/main/default/objects/Contract/fields/CWS_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legal_Entity__c</fullName>
    <description>Legal Entity at the contract.</description>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW-AU</fullName>
                <label>CW Australia Entity</label>
            </value>
            <value>
                <fullName>CW-CAD</fullName>
                <label>CW Canada Entity</label>
            </value>
            <value>
                <fullName>CW-IN</fullName>
                <label>CW India Entity</label>
            </value>
            <value>
                <fullName>CW-UK</fullName>
                <label>CW UK Entity</label>
            </value>
            <value>
                <fullName>CW-US</fullName>
                <label>CW US Entity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>