force-app/main/default/objects/Contract/fields/CWS_Margin__c.field-meta.xml
<CustomField>
    <fullName>CWS_Margin__c</fullName>
    <description>Field to calculate margin of all products</description>
    <inlineHelpText>Field to calculate margin of all products</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>