force-app/main/default/objects/Contract/fields/CWS_Max_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_Max_Renewal_Uplift__c</fullName>
    <description>Maximum Renewal Uplift for the Contract.</description>
    <label>Max Renewal Uplift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>