force-app/main/default/objects/Contract/fields/CWS_Min_Commit_Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit_Product_Start_Date__c</fullName>
    <description>For Min Commit Products to Select Start Date to Be First of Current or First of Next Month</description>
    <inlineHelpText>For Min Commit Products to Select Start Date to Be First of Current or First of Next Month</inlineHelpText>
    <label>Min Commit Product Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Min_Commit_Product_Start_Date</valueSetName>
    </valueSet>
</CustomField>