force-app/main/default/objects/Contract/fields/CWS_MNG_Partner_Log_In__c.field-meta.xml
<CustomField>
    <fullName>CWS_MNG_Partner_Log_In__c</fullName>
    <description>MNG Partner Log In</description>
    <inlineHelpText>MNG Partner Log In</inlineHelpText>
    <label>MNG Partner Log In</label>
    <length>50</length>
    <type>Text</type>
</CustomField>