force-app/main/default/objects/Contract/fields/CWS_Month2Month__c.field-meta.xml
<CustomField>
    <fullName>CWS_Month2Month__c</fullName>
    <formula>IF( ISPICKVAL( CWS_LegacyEvergreen__c ,&apos;CMS&apos;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the quote is evergreen or termed, for migrated CMS records</inlineHelpText>
    <label>Month to Month</label>
    <type>Checkbox</type>
</CustomField>