force-app/main/default/objects/Contract/fields/CWS_MRR_Reduction__c.field-meta.xml
<CustomField>
    <fullName>CWS_MRR_Reduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRR Reduction</label>
    <type>Checkbox</type>
</CustomField>