force-app/main/default/objects/Contract/fields/CWS_MSA_Agreement__c.field-meta.xml
<CustomField>
    <fullName>CWS_MSA_Agreement__c</fullName>
    <label>MSA Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>