force-app/main/default/objects/Contract/fields/CWS_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Name__c</fullName>
    <description>Contract Name = &lt;sold-to account&gt; + &lt;RTM&gt; + &lt;Opt-in (or) Opt-out&gt; + &lt;Bill-to Account Name&gt; + &lt;Master Contract (or) Specific Product Category&gt;</description>
    <inlineHelpText>Contract Name</inlineHelpText>
    <label>Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>