force-app/main/default/objects/Contract/fields/CWS_OF_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_OF_Signed_Date__c</fullName>
    <description>OF Signed Date</description>
    <inlineHelpText>OF Signed Date</inlineHelpText>
    <label>OF Signed Date</label>
    <type>Date</type>
</CustomField>