force-app/main/default/objects/Contract/fields/CWS_OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>CWS_OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Order this contract was created from</description>
    <inlineHelpText>Original Order this contract was created from</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contracts (Original Order)</relationshipLabel>
    <relationshipName>CWS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>