force-app/main/default/objects/Contract/fields/CWS_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_PO_Number__c</fullName>
    <description>PO Number from Partner</description>
    <inlineHelpText>PO Number from Partner</inlineHelpText>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>