force-app/main/default/objects/Contract/fields/CWS_Pre_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pre_Payment_Amount__c</fullName>
    <description>Pre-payment Amount populated by sales rep.</description>
    <label>Pre-Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>