force-app/main/default/objects/Contract/fields/CWS_PrimaryRenewalQuote__c.field-meta.xml
<CustomField>
    <fullName>CWS_PrimaryRenewalQuote__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.SBQQ__PrimaryQuote__r.Name</formula>
    <label>Primary Renewal Quote</label>
    <type>Text</type>
</CustomField>