force-app/main/default/objects/Contract/fields/CWS_Prior_Annual_End_Customer_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Annual_End_Customer_Net_Total__c</fullName>
    <description>Prior Annualized End Customer Net Total</description>
    <inlineHelpText>Prior Annualized End Customer Net Total from Quote</inlineHelpText>
    <label>Prior Annualized End Customer Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>