force-app/main/default/objects/Contract/fields/CWS_Prior_Annualized_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Annualized_ACV__c</fullName>
    <description>Prior Annualized ACV</description>
    <inlineHelpText>Prior Annualized ACV</inlineHelpText>
    <label>Prior Annualized ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>