force-app/main/default/objects/Contract/fields/CWS_Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Categories__c</fullName>
    <description>Product Categories</description>
    <inlineHelpText>Product Categories</inlineHelpText>
    <label>Product Categories</label>
    <type>TextArea</type>
</CustomField>