force-app/main/default/objects/Contract/fields/CWS_Quote_SubType__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_SubType__c</fullName>
    <description>This field is mandatory for selection if the transaction reason is credit/rebill</description>
    <label>Amend Quote SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Rebill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>