force-app/main/default/objects/Contract/fields/CWS_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_Type__c</fullName>
    <description>Quote Type</description>
    <inlineHelpText>Quote Type</inlineHelpText>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal with Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>