force-app/main/default/objects/Contract/fields/CWS_Re_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Re_Contract_Type__c</fullName>
    <inlineHelpText>Used to determine whether to create a new opportunity in the re-contract process</inlineHelpText>
    <label>Re-Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business Re-Contract</fullName>
            </value>
            <value>
                <fullName>Existing Re-Contract Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>