force-app/main/default/objects/Contract/fields/CWS_Rebill_Quote__c.field-meta.xml
<CustomField>
    <fullName>CWS_Rebill_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebill Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Rebill Quote)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>