force-app/main/default/objects/Contract/fields/CWS_Renewable_Products__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewable_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of Renewable Products at the Contract Level.</description>
    <label>Renewable Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>