force-app/main/default/objects/Contract/fields/CWS_Renewal_Batch_Failed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Batch_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Error when updating Renewal Forecast/Renewal Quoted Flag on Contract.</description>
    <inlineHelpText>Error when updating Renewal Forecast/Renewal Quoted Flag on Contract.</inlineHelpText>
    <label>Renewal Batch Failed</label>
    <type>Checkbox</type>
</CustomField>