force-app/main/default/objects/Contract/fields/CWS_Renewal_CAP__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_CAP__c</fullName>
    <description>Renewal Uplift %</description>
    <inlineHelpText>Renewal Uplift %</inlineHelpText>
    <label>Renewal Cap %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>