force-app/main/default/objects/Contract/fields/CWS_Renewal_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Category__c</fullName>
    <label>Renewal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Renewal_Category</valueSetName>
    </valueSet>
</CustomField>