force-app/main/default/objects/Contract/fields/CWS_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Date__c</fullName>
    <formula>EndDate + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>