force-app/main/default/objects/Contract/fields/CWS_Renewal_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Notice_Sent_Date__c</fullName>
    <description>Renewal Notice Sent Date</description>
    <inlineHelpText>Renewal Notice Sent Date</inlineHelpText>
    <label>Renewal Notice Sent Date</label>
    <type>Date</type>
</CustomField>