force-app/main/default/objects/Contract/fields/CWS_Renewal_Opportunity_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Opportunity_Schedule__c</fullName>
    <description>Renewal Opportunity Creation Date.</description>
    <inlineHelpText>Renewal Opportunity Creation Date. -120 days from Contract End Date.</inlineHelpText>
    <label>Renewal Opportunity Schedule</label>
    <type>Date</type>
</CustomField>