force-app/main/default/objects/Contract/fields/CWS_Renewal_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Opportunity_Stage__c</fullName>
    <description>Custom Formula Field to retrieve the Renewal Opportunity Stage of the Renewed Opportunity on this Contract</description>
    <formula>TEXT(SBQQ__RenewalOpportunity__r.StageName)</formula>
    <inlineHelpText>Formula Field to retrieve the Renewal Opportunity Stage</inlineHelpText>
    <label>Renewal Opportunity Stage</label>
    <type>Text</type>
</CustomField>