force-app/main/default/objects/Contract/fields/CWS_Renewal_Owner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Owner__c</fullName>
    <description>Email of the Renewal Owner as used in the for sending the Notification.</description>
    <label>Renewal Owner</label>
    <type>Email</type>
</CustomField>