force-app/main/default/objects/Contract/fields/CWS_Renewal_Quote_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Quote_Schedule__c</fullName>
    <description>Renewal Quote Creation Date.</description>
    <inlineHelpText>Renewal Quote Creation Date. Defaults to -30 Days from Contract End Date.</inlineHelpText>
    <label>Renewal Quote Schedule</label>
    <type>Date</type>
</CustomField>