force-app/main/default/objects/Contract/fields/CWS_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Type__c</fullName>
    <description>Renewal Type of Contract. Picklist values - Opt-Out, Opt-In and Non-Renewable</description>
    <inlineHelpText>Renewal Type of Contract. Picklist values - Opt-Out, Opt-In and Non-Renewable</inlineHelpText>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Renewal_Type</valueSetName>
    </valueSet>
</CustomField>